updated index header & next package

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -4,3 +4,4 @@ $purpleTransparent: rgb(195, 44, 145, 0.7);
 $gray: rgb(54, 54, 54);
 $black: rgb(0, 0, 0);
 $white: rgb(255, 255, 255);
+$transwhite: rgba(255, 255, 255, 0.438);
