--- a/scss/pages.scss
+++ b/scss/pages.scss
@@ -1,5 +1,58 @@
 @import 'vars';
 
+.coolHeader {
+    height: 100vh;
+    width: 100%;
+    padding: 0;
+
+    .sidepanel {
+        background-color: rgba(0, 0, 0, 0.692);
+        height: 96.5vh;
+        width: 60%;
+        display: flex;
+        padding: 20px;
+        padding-left: 40px;
+        margin-bottom: 0;
+        padding-bottom: 0;
+        align-items: center;
+
+        h1 {
+            font-family: 'Roboto';
+            font-weight: 400;
+            margin: 0;
+            padding: 0;
+            font-size: 80px;
+            animation: glow 1s ease-in-out infinite alternate;
+        }
+
+        @media screen and (max-width: 400px) {
+            h1 {
+                font-size: 40px;
+            }
+        }
+    }
+
+    @media screen and (max-width: 820px) {
+        .sidepanel {
+            width: 100%;
+        }
+
+        h1 {
+            font-size: 50px;
+        }
+    }
+}
+
+@-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 10px $transwhite, 0 0 20px $transwhite, 0 0 30px $transwhite, 0 0 40px $transwhite, 0 0 50px $transwhite, 0 0 60px $transwhite, 0 0 70px $transwhite;
+    }
+    
+    to {
+        text-shadow: 0 0 10px $transwhite, 0 0 20px $transwhite, 0 0 30px $transwhite, 0 0 40px $transwhite, 0 0 50px $transwhite, 0 0 60px $transwhite, 0 0 70px $transwhite;
+    }
+}
+
 .Index {
     .photogallery {
         display: flex;
