--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -55,6 +55,23 @@ iframe {
     outline: 0;
 }
 
+/*animations*/
+
+.floating { 
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 30px;
+    margin-top: 5px;
+}
+ 
+@keyframes floating {
+    0% { transform: translate(0,  0px); }
+    50%  { transform: translate(0, 15px); }
+    100%   { transform: translate(0, -0px); }   
+}
+
 /*grid*/
 
 .grid {
@@ -84,10 +101,11 @@ iframe {
 /*components*/
 
 .Tabs {
-    background-color: $gray;
+    background-color: transparent;
     margin: 0;
     padding: 0;
-    border: 1px solid $gray;
+    border: 1px solid transparent;
+    z-index: 3 !important;
 
     .logo {
         flex: 1;
