fixed nav bar issues

--- a/scss/pages.scss
+++ b/scss/pages.scss
@@ -14,7 +14,8 @@
         margin-bottom: 0;
         padding-bottom: 0;
         align-items: center;
-        height: 100vh;
+        margin-top: 100px;
+        height: 70vh;
         top: 0;
 
         h1 {
