--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -105,6 +105,7 @@ iframe {
     margin: 0;
     padding: 0;
     border: 1px solid transparent;
+    height: 30px;
 
     .logo {
         flex: 1;
