switched from light to dark

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -3,5 +3,6 @@ $highlightpurple: rgb(255, 195, 236);
 $purpleTransparent: rgb(195, 44, 145, 0.7);
 $gray: rgb(54, 54, 54);
 $black: rgb(0, 0, 0);
+$darkblue: rgb(17, 16, 27);
 $white: rgb(255, 255, 255);
 $transwhite: rgba(255, 255, 255, 0.438);
