--- a/scss/pages.scss
+++ b/scss/pages.scss
@@ -130,7 +130,7 @@
     }
 
     .grid-item {
-        background-color: rgb(235, 235, 235);
+        background-color: #333;
         padding: 5px;
         padding-bottom: 20px;
 
@@ -160,7 +160,7 @@
     }
 
     .eventsection {
-        background-color: rgb(245, 245, 245);
+        background-color: #333;
         padding: 10px;
         margin: 10px;
         border-radius: 10px;
@@ -178,7 +178,7 @@
 
     th {
         font-weight: 300;
-        background-color: $highlightpurple;
+        background-color: $purple;
     }
 
     td, th {
