--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,6 +4,8 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto Condensed', 'Roboto', Arial, Helvetica, sans-serif;
+    background-color: $darkblue;
+    color: $white;
 }
 
 ::-moz-selection {
