--- a/scss/pages.scss
+++ b/scss/pages.scss
@@ -59,6 +59,25 @@
         flex-wrap: wrap;
         padding: 0;
     }
+
+    .firstrow {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+        margin: 10px;
+
+        .col {
+            background-color: #333;
+            border-radius: 15px;
+            padding: 5px;
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+        }
+    }
     
     .picrow {
         flex: 24%;
@@ -73,6 +92,10 @@
     }
     
     @media screen and (max-width: 820px) {
+        .firstrow {
+            grid-template-columns: auto;
+        }
+
         .picrow {
             flex: 48%;
             max-width: 48%;
