typewriter & scrolling satisfaction

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -74,6 +74,20 @@ iframe {
     100%   { transform: translate(0, -0px); }   
 }
 
+.fade {
+    opacity: 0.6;
+    transform: translateY(8vh);
+    visibility: hidden;
+    transition: opacity 1200ms ease-out, transform 600ms ease-out,
+    visibility 1200ms ease-out;
+    will-change: opacity, transform, visibility;
+}
+.fade.is-visible {
+    opacity: 1;
+    transform: none;
+    visibility: visible;
+}
+
 /*grid*/
 
 .grid {
