--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,4 +1,5 @@
-$purple: rgb(195, 44, 145);
+$purple: rgb(228, 85, 180);
+$normalpurple: rgb(195, 44, 145);
 $highlightpurple: rgb(255, 195, 236);
 $purpleTransparent: rgb(195, 44, 145, 0.7);
 $gray: rgb(54, 54, 54);
