--- a/scss/pages.scss
+++ b/scss/pages.scss
@@ -54,10 +54,33 @@
 }
 
 .Index {
-    .photogallery {
-        display: flex;
-        flex-wrap: wrap;
-        padding: 0;
+    .teamhighlights {
+        .col {
+            min-height: 200px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            h3 {
+                color: white !important;
+            }
+
+            a {
+                text-decoration: none;
+                color: white !important;
+                background-color: rgba(51, 51, 51, 0.555);
+                width: 100%;
+            }
+        }
+    }
+
+    .grid-item {
+        border: 2px solid $purple;
+        text-align: center;
+    }
+
+    h3 {
+        color: $purple;
     }
 
     .firstrow {
@@ -78,44 +101,50 @@
             color: white;
         }
     }
-    
-    .picrow {
-        flex: 24%;
-        max-width: 24%;
-        padding: 0 4px;
-
-        img {
-            margin-top: 8px;
-            vertical-align: middle;
-            width: 100%;
-        }
-    }
-    
-    @media screen and (max-width: 820px) {
-        .firstrow {
-            grid-template-columns: auto;
-        }
-
-        .picrow {
-            flex: 48%;
-            max-width: 48%;
-        }
-    }
-    
-    @media screen and (max-width: 600px) {
-        .picrow {
-            flex: 99%;
-            max-width: 99%;
-        }
-    }    
 }
+
+.photogallery {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+}
+
+.picrow {
+    flex: 24%;
+    max-width: 24%;
+    padding: 0 4px;
+
+    img {
+        margin-top: 8px;
+        vertical-align: middle;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .firstrow {
+        grid-template-columns: auto;
+    }
+
+    .picrow {
+        flex: 48%;
+        max-width: 48%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .picrow {
+        flex: 99%;
+        max-width: 99%;
+    }
+}    
 
 .About {
     .grid-item {
         border: 2px solid $purple;
         text-align: center;
     }
-
+    
     h3, p {
         margin: 0;
         padding: 0;
@@ -130,33 +159,36 @@
     }
 }
 
-.Accomplishments {
-    .grid-item {
-        border: 2px solid $purple;
-        text-align: center;
-    }
-
-    b {
-        color: $purple;
-    }
-
-    .light {
-        font-weight: 300;
-    }
-}
-
 .Resources, .Seasons {
-    .grid {
+    .award-grid {
+        .grid-item {
+            border: 2px solid $purple;
+            text-align: center;
+        }
+    
+        b {
+            color: $purple;
+        }
+    
+        .light {
+            font-weight: 300;
+        }
+    }
+
+    .seasongrid {
         grid-template-columns: 49% 49%;
     }
 
-    .grid-item {
-        background-color: #333;
-        padding: 5px;
-        padding-bottom: 20px;
-
-        p {
-            font-weight: 300;
+    .seasongrid, .resource-grid {
+        .grid-item {
+            background-color: #333;
+            padding: 5px;
+            border-radius: 10px;
+            padding-bottom: 20px;
+    
+            p {
+                font-weight: 300;
+            }
         }
     }
 
