--- a/scss/pages.scss
+++ b/scss/pages.scss
@@ -258,61 +258,59 @@
 }
 
 .Contact {
-    .middle {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-        width: 100%;
-        z-index: 1;
-        margin: 20px 0;
-    }
-    
-    .contact-form-box {
-        background-color: $purple;
-        justify-content: center;
-        border-radius: 15px;
-        width: 50%;
-        padding: 0;
-        min-width: 300px;
-        color: white;
+    .contactTable {
+        height: fit-content;
 
-        a {
-            color: $purple;
-            text-decoration: none;
+        tr {
+            vertical-align: top;
         }
-    }
-    
-    @media screen and (max-width: 800px) {
-        .contact-form-box {
-            width: 50%;
+
+        .tablesection {
+            p {
+                margin: 0;
+                color: $purple;
+            }
+
+            a {
+                color: white;
+                text-decoration: none;
+            }
         }
-    }
-    
-    @media screen and (max-width: 600px) {
-        .contact-form-box {
-            width: 70%;
-        }
-    }
-    
-    .contact-title {
-        background-color: black;
-        padding: 10px 0px;
-        border-radius: 15px 15px 0px 0px;
-        margin: 0;
-        margin-bottom: 10px;
-        text-align: center;
-        color: white;
-        font-family: 'Roboto Condensed', 'Roboto', Arial, Helvetica, sans-serif;
-    }
-    
-    .contact-form {
-        margin-left: 10px;
-        margin-right: 15px;
     }
 
-    label {
-        font-weight: 400;
+    .contactbox {
+        padding: 40px;
+
+        h1 {
+            text-align: center;
+            font-size: 40px;
+        }
+
+        .col {
+            padding: 10px;
+        }
+    }
+
+    .twogrid {
+        display: grid;
+        grid-template-columns: 30% 70%;
+        background: linear-gradient(to bottom right,rgba(46, 21, 45, 0.95), rgba(32, 32, 32, 0.95)), url("/images/fundraiser.jpeg");
+        background-repeat: no-repeat;
+        background-position: top right;
+        background-attachment: fixed;
+        background-size: cover;
+        border-radius: 20px;
+        padding-top: 5px;
+    }
+
+    label { 
+        background-color: transparent;
+    }
+
+    @media screen and (max-width: 820px) {
+        .twogrid {
+            grid-template-columns: auto;
+        }
     }
     
     input[type=text],
@@ -321,15 +319,9 @@
         height: 25px;
         border-radius: 2px;
     }
-    
-    input[type=text],
-    input[type=email],
+
     textarea {
-        width: 100%;
-    }
-    
-    textarea {
-        min-height: 50px;
+        min-height: 100px;
         max-height: 400px;
         resize: vertical;
     }
@@ -339,15 +331,15 @@
     input,
     button,
     textarea {
-        padding-left: 3px;
+        margin-top: 5px;
+        background-color: transparent;
         outline: none;
-        font-family: 'Roboto Condensed', 'Roboto', Arial, Helvetica, sans-serif;
         font-weight: 300;
     }
     
     button {
-        background-color: $gray;
-        width: 100%;
+        background-color: $normalpurple;
+        width: 50%;
         padding: 10px;
         color: white;
         border: none;
@@ -355,15 +347,31 @@
         cursor: pointer;
         font-weight: 500;
         font-size: 15px;
+        margin: 0 !important;
     }
     
     button:hover {
-        background-color: $black;
+        background-color: $darkpurple;
+    }
+
+    form {
+        width: 95%;
+        margin: 0 !important;
+        padding: 0;
+    }
+    
+    input[type=text],
+    input[type=email],
+    textarea {
+        width: 98%;
+        border: 2px solid white;
+        padding: 5px;
     }
     
     input[type=text]:focus,
+    input[type=email]:focus,
     textarea:focus {
-        box-shadow: 0 0 5px rgba(81, 203, 238, 1);
-        border: 1px solid rgba(81, 203, 238, 1);
+        box-shadow: 0 0 5px $highlightpurple;
+        border: 2px solid $highlightpurple;
     }
 }
