--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,11 +1,14 @@
 @import 'vars';
 
-html, body {
+html, body, input, textarea, label {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto Condensed', 'Roboto', Arial, Helvetica, sans-serif;
     background-color: $darkblue;
     color: $white;
+}
+
+html, body, input, button, textarea, label {
+    font-family: 'Roboto Condensed', 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 ::-moz-selection {
@@ -40,6 +43,14 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.upcomingEvents {
+    a {
+        font-weight: 300;
+        color: white;
+        text-decoration: none;
+    }
 }
 
 @media only screen and (min-width: 900px) {
