fix text, image banner, implement feedback pt 1

--- a/scss/pages.scss
+++ b/scss/pages.scss
@@ -275,6 +275,10 @@
                 color: white;
                 text-decoration: none;
             }
+
+            a:hover {
+                text-decoration: underline;
+            }
         }
     }
 
