--- a/scss/pages.scss
+++ b/scss/pages.scss
@@ -35,6 +35,7 @@
     @media screen and (max-width: 820px) {
         .sidepanel {
             width: 100%;
+            padding-left: 0px;
         }
 
         h1 {
@@ -118,6 +119,12 @@
             color: white;
         }
     }
+
+    @media screen and (max-width: 820px) {
+        .firstrow {
+            grid-template-columns: auto;
+        }
+    }
 }
 
 .photogallery {
@@ -194,6 +201,12 @@
 
     .seasongrid {
         grid-template-columns: 49% 49%;
+    }
+
+    @media screen and (max-width: 820px) {
+        .seasongrid {
+            grid-template-columns: 100%;
+        }
     }
 
     .seasongrid, .resource-grid {
