--- a/scss/pages.scss
+++ b/scss/pages.scss
@@ -242,6 +242,7 @@
             padding: 5px;
             border-radius: 10px;
             padding-bottom: 20px;
+            padding-left: 20px;
     
             p {
                 font-weight: 300;
@@ -275,6 +276,12 @@
         margin: 10px;
         border-radius: 10px;
         border-left: 7px solid $purple;
+
+        h4 {
+            margin: 0;
+            padding: 0;
+            font-weight: 400;
+        }
     }
     
     table {
