--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -57,17 +57,14 @@ input, textarea {
     }
 }
 
-@media only screen and (min-width: 900px) {
-    .column {
-        float: left;
-        width: 48%;
-        padding: 10px;
-    }
-    
-    .row:after {
-        content: "";
-        display: table;
-        clear: both;
+.row {
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+@media only screen and (max-width: 700px) {
+    .row {
+        grid-template-columns: 100%;
     }
 }
 
