--- a/styles.css
+++ b/styles.css
@@ -412,8 +412,7 @@ h1 {
 }
 
 .coolHeader {
-    background-image: url("/images/centerstageworldsrobot.JPG");
-    /*linear-gradient(180deg, #000, rgba(0, 0, 0, .5)),*/
+    background-image: linear-gradient(180deg, #000, rgb(0, 0, 0, .5)), url("/images/centerstageworldsrobot.JPG");
     width: 100%;
     padding: 0
 }
