--- a/styles.css
+++ b/styles.css
@@ -412,7 +412,7 @@ h1 {
 }
 
 .coolHeader {
-    background-image: linear-gradient(180deg, #000, rgb(0, 0, 0, .5)), url("/images/centerstageworldsrobot.JPG");
+    background-image: linear-gradient(180deg, #000, rgb(0, 0, 0, .5)), url("../images/centerstageworldsrobot.JPG");
     width: 100%;
     padding: 0
 }
