--- a/styles.css
+++ b/styles.css
@@ -412,7 +412,7 @@ h1 {
 }
 
 .coolHeader {
-    background: linear-gradient(180deg, #000, rgba(0, 0, 0, .5)), url(https://ftc18225.everstem.org//images/coolstaterobotcadphoto.png);
+    background: linear-gradient(180deg, #000, rgba(0, 0, 0, .5)), url(https://ftc18225.everstem.org/images/coolstaterobotcadphoto.jpg);
     width: 100%;
     padding: 0
 }
