--- a/styles.css
+++ b/styles.css
@@ -82,31 +82,31 @@ textarea {
 @keyframes ani1{
     0% {opacity: 0;}
     10% {opacity: 1;}
-    20% {opacity 0;}
+    20% {opacity: 0;}
 }
 
 @keyframes ani2{
     20% {opacity: 0;}
     30% {opacity: 1;}
-    40% {opacity 0;}
+    40% {opacity: 0;}
 }
 
 @keyframes ani3{
     40% {opacity: 0;}
     50% {opacity: 1;}
-    60% {opacity 0;}
+    60% {opacity: 0;}
 }
 
 @keyframes ani4{
     60% {opacity: 0;}
     70% {opacity: 1;}
-    80% {opacity 0;}
+    80% {opacity: 0;}
 }
 
 @keyframes ani5{
     80% {opacity: 0;}
     90% {opacity: 1;}
-    100% {opacity 0;}
+    100% {opacity: 0;}
 }
 
 .icon {
