--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ label,
 textarea {
     margin: 0;
     padding: 0;
-    background-color: #11101b;
+    background-color: #000000;
     color: #fff
 }
 
