--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ textarea {
     font-family: Poppins;
     font-weight: bold;
     opacity: 0;
-
+    position: absolute;
     width: 100%;
     white-space: nowrap;
 }
