--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ label,
 textarea {
     margin: 0;
     padding: 0;
-    background-color: #000000;
-    color: #fff
+    background-color: #fff;
+    color: #000000;
 }
 
 input::-moz-placeholder,
