--- a/styles.css
+++ b/styles.css
@@ -401,7 +401,7 @@ h1 {
 .Footer .footerPt2 {
     background-color: #000;
     padding: 10px
-    position: fixed;
+    position: absolute;
     bottom: 0;
 }
 
@@ -411,7 +411,7 @@ h1 {
     text-align: center;
     margin: 0;
     padding: 0
-    position: fixed;
+    position: absolute;
     bottom: 0;
 }
 
