--- a/styles.css
+++ b/styles.css
@@ -402,6 +402,8 @@ h1 {
     background-color: #000;
     padding: 10px
     bottom: 0;
+    position: absolute;
+    top: 800px;
 }
 
 .Footer h4 {
