--- a/styles.css
+++ b/styles.css
@@ -933,11 +933,6 @@ h1 {
     "width" 100;
 }
 
-.blankBox {
-    width: 300px;
-    height: 450px;
-    border: 15px white;
-    padding: 50px;
-    margin: 20px;
-    position: static;
+u {
+  text-decoration: underline;
 }
