--- a/styles.css
+++ b/styles.css
@@ -937,5 +937,11 @@ u {
   text-decoration: underline;
 }
 
+.container {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 5px;
+}
 
 
