--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,120 @@ textarea {
     color: #000000;
 }
 
+/* Cool Header */
+
+.coolHeader {
+    background: linear-gradient(180deg, #000, rgba(0, 0, 0, .5)), url(images/centerstageworldsrobot.png);
+    width: 100%;
+    padding: 0
+}
+
+.coolHeader .sidepanel {
+    display: flex;
+    position: absolute;
+    width: 60%;
+    padding-left: 40px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    align-items: center;
+    margin-top: 100px;
+    top: 0
+}
+
+.coolHeader .sidepanel h1 {
+    font-family: Roboto;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+    font-size: 80px;
+    animation: glow 1s ease-in-out infinite alternate
+}
+
+@media screen and (max-width:400px) {
+    .coolHeader .sidepanel h1 {
+        font-size: 40px
+    }
+}
+
+@media screen and (max-width:820px) {
+    .coolHeader .sidepanel {
+        width: 100%;
+        padding-left: 0
+    }
+
+    .coolHeader h1 {
+        font-size: 50px
+    }
+}
+
+/* Tabs & tabs */
+
+.Tabs {
+    background-color: transparent;
+    margin: 0;
+    padding: 0;
+    border: 1px solid transparent;
+    height: 30px
+}
+
+.Tabs .logo {
+    flex: 1 1
+}
+
+.Tabs .tabs {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center
+}
+
+.Tabs .tab {
+    float: right;
+    padding: 6px 20px;
+    margin: 5px;
+    display: flex
+}
+
+.Tabs .tab a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: 100
+}
+
+.Tabs .this-page {
+    border-bottom: 2px solid #fff
+}
+
+.Tabs .toggle {
+    cursor: pointer;
+}
+
+/* Floating */
+
+.floating {
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 30px;
+    margin-top: 5px
+}
+
+@keyframes floating {
+    0% {
+        transform: translate(0)
+    }
+
+    50% {
+        transform: translateY(15px)
+    }
+
+    to {
+        transform: translate(0)
+    }
+}
+
+/*
 @media only screen and (min-width: 768px) {
     .sec1 {
         padding-bottom: 1.5rem;
@@ -187,30 +301,11 @@ iframe {
     border: 1px solid #000;
     outline: 0
 }
+*/
 
-.floating {
-    animation-name: floating;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-    margin-left: 30px;
-    margin-top: 5px
-}
 
-@keyframes floating {
-    0% {
-        transform: translate(0)
-    }
 
-    50% {
-        transform: translateY(15px)
-    }
-
-    to {
-        transform: translate(0)
-    }
-}
-
+/*
 .grid,
 .grid-two {
     display: grid;
@@ -275,47 +370,11 @@ h1 {
 .teamhighlights .col:hover {
     transform: scale(1.15)
 }
+*/
 
-.Tabs {
-    background-color: transparent;
-    margin: 0;
-    padding: 0;
-    border: 1px solid transparent;
-    height: 30px
-}
 
-.Tabs .logo {
-    flex: 1 1
-}
 
-.Tabs .tabs {
-    list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center
-}
-
-.Tabs .tab {
-    float: right;
-    padding: 6px 20px;
-    margin: 5px;
-    display: flex
-}
-
-.Tabs .tab a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: 100
-}
-
-.Tabs .this-page {
-    border-bottom: 2px solid #fff
-}
-
-.Tabs .toggle {
-    cursor: pointer;
-}
-
+/*
 .toggle-button {
     display: flex;
     align-items: center;
@@ -447,50 +506,11 @@ h1 {
     margin: 0;
     padding: 0
 }
+*/
 
-.coolHeader {
-    background: linear-gradient(180deg, #000, rgba(0, 0, 0, .5)), url(images/centerstageworldsrobot.png);
-    width: 100%;
-    padding: 0
-}
 
-.coolHeader .sidepanel {
-    display: flex;
-    position: absolute;
-    width: 60%;
-    padding-left: 40px;
-    margin-bottom: 0;
-    padding-bottom: 0;
-    align-items: center;
-    margin-top: 100px;
-    top: 0
-}
 
-.coolHeader .sidepanel h1 {
-    font-family: Roboto;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-    font-size: 80px;
-    animation: glow 1s ease-in-out infinite alternate
-}
-
-@media screen and (max-width:400px) {
-    .coolHeader .sidepanel h1 {
-        font-size: 40px
-    }
-}
-
-@media screen and (max-width:820px) {
-    .coolHeader .sidepanel {
-        width: 100%;
-        padding-left: 0
-    }
-
-    .coolHeader h1 {
-        font-size: 50px
-    }
-}
+/*
 
 .Index .impact .grid {
     grid-template-columns: 33% 33% 33%
@@ -557,15 +577,15 @@ h1 {
 .Index .gallery-row {
     display: flex;
     flex-wrap: wrap;
-    gap: 4px; /* Space between images */
+    gap: 4px;
 }
 
 .Index .gallery-row img {
     margin: 2px;
     display: block;
-    width: calc(100% / auto); /* Ensures images are responsive */
+    width: calc(100% / auto);
     max-width: 100%;
-    height: auto; /* Keeps the aspect ratio */
+    height: auto;
 }
 
 .photogallery {
@@ -997,4 +1017,4 @@ u {
         "link";
     align-items: center;
     }
-
+*/
