--- a/styles.css
+++ b/styles.css
@@ -132,12 +132,16 @@ textarea::placeholder {
     }
 }
 
-.table1 .table2 {
-    background-size: cover;
-    display: table;
-    position: relative;
-    table-layout: fixed;
-    width: 100%;
+/* About Us Section */
+
+@media only screen and (min-width: 768px) {
+    .table1 .table2 {
+        background-size: cover;
+        display: table;
+        position: relative;
+        table-layout: fixed;
+        width: 100%;
+    }
 }
 
 .table2 {
@@ -154,6 +158,18 @@ textarea::placeholder {
     display: table-cell;
     vertical-align: middle;
     width: 100%;
+}
+
+.AbtUs {
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 0;
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 48px;
+    padding-right: 48px;
+    outline: 0;
 }
 
 /*
