--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,19 @@ textarea::placeholder {
     outline: 0;
 }
 
+/* Gallery Grids */
+
+.gallery {
+    display:grid;
+    grid-template-columns: 50% 50%;
+}
+
+.column {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /*
 @media only screen and (min-width: 768px) {
     .sec1 {
