--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,7 @@ textarea::placeholder {
     grid-template-columns: 50% 50%;
 }
 
-.column {
+.photo {
     display: flex;
     justify-content: center;
     align-items: center;
