--- a/styles.css
+++ b/styles.css
@@ -135,15 +135,15 @@ textarea::placeholder {
 /* About Us Section */
 
 @media only screen and (min-width: 768px) {
-    .table1 .table2 {
+    .grid-container {
         background-size: cover;
-        display: table;
-        position: relative;
-        table-layout: fixed;
-        width: 100%;
+        display: grid;
+        width: 100%
+        justify-content: center;
+        grid-template-columns: 1280px;
     }
 }
-
+/*
 .table2 {
     display: table-cell;
     height: 100%;
@@ -159,7 +159,7 @@ textarea::placeholder {
     vertical-align: middle;
     width: 100%;
 }
-
+*/
 .AbtUs {
     width: 100%;
     margin-top: 0;
