--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,84 @@ textarea::placeholder {
     align-items: center;
 }
 
+/* DECA feature banner */
+
+@media screen and (max-width: 479px) {
+    .feature-banner {
+        border-radius: .8rem;
+        flex-direction: column-reverse;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .feature-banner {
+        height: auto;
+    }
+}
+
+.feature-banner {
+    background-color: var(--midnight-blue);
+    border-radius: 1rem;
+    height: 500px;
+    display: flex;
+    position: relative;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 479px) {
+    .feature-banner-content-div {
+        width: 100%;
+        padding: 35px;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    .feature-banner-content-div {
+        width: 50%;
+        padding: 50px;
+    }
+}
+
+.feature-banner-content-div {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 40%;
+    padding: 75px;
+    display: flex;
+}
+
+@media screen and (max-width: 479px) {
+    .feature-content {
+        flex-wrap: wrap;
+        align-content: stretch;
+    }
+}
+
+.feature-content {
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 500px;
+    display: flex;
+}
+
+@media screen and (max-width: 479px) {
+    .feature-banner-image-div {
+        width: 100%;
+        height: 200px;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    .feature-banner-image-div {
+        width: 50%;
+    }
+}
+
+.feature-banner-image-div {
+    width: 60%;
+}
+
 /*
 @media only screen and (min-width: 768px) {
     .sec1 {
