--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ textarea::placeholder {
 }
 
 .feature-banner {
-    background-color: #E47DC2;
+    background-color: #FDC4EA;
     border-radius: 1rem;
     height: 500px;
     display: flex;
