--- a/styles.css
+++ b/styles.css
@@ -263,6 +263,23 @@ textarea::placeholder {
     width: 60%;
 }
 
+.title-grid {
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr;
+    justify-items: start;
+}
+
+.w-layout-grid {
+    grid-row-gap: 16px;
+    grid-column-gap: 16px;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-columns: 1fr;
+    display: grid;
+}
+
 /*
 @media only screen and (min-width: 768px) {
     .sec1 {
