--- a/styles.css
+++ b/styles.css
@@ -280,6 +280,21 @@ textarea::placeholder {
     display: grid;
 }
 
+.inner-section-grid {
+    grid-column-gap: 55px;
+    grid-row-gap: 55px;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr;
+    width: 100%;
+}
+
+.container {
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
 /*
 @media only screen and (min-width: 768px) {
     .sec1 {
